duniverse/ppx_js_style.v0.13.0/test/ocamlformat.mlt

let _ : _ = 3 [@ocamlformat "test"]

[%%expect {|
Line _, characters _-_:
Error: Invalid ocamlformat attribute. Ocamlformat cannot be configured locally
|}]

[@@@ocamlformat "disable"]

let _ : _ = `dont_reformat_me

[@@@ocamlformat "enable"]

[%%expect {|
|}]


let _ = x [@@ocamlformat "disable"]

[%%expect {|
Line _, characters _-_:
Error: Invalid ocamlformat attribute. Ocamlformat can only be disabled at toplevel
(e.g [@@@ocamlformat "disable"])
|}]
